@@ -1,3 +1,8 @@
+2001-12-08  Richard Hestilow  <hestilow@ximian.com>
+
+	* Partial revamp to use bonobo control instead of bug-prone
+	custom socket; also port away from libcapplet.
+
 2001-10-13  Bradford Hovinen  <hovinen@ximian.com>
 
 	* lister.c (edit_file_to_use): Be paranoid about what we have read
